--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="cancel">Cancel</string>
     <string name="apply">Apply</string>
     <string name="lat_lng_placeholder">%1$f, %2$f</string>
+    <string name="error_latitude_not_valid">Latitude value must be between -90 and 90 degrees</string>
+    <string name="error_longitude_not_valid">Longitude value must be between -180 and 180 degrees</string>
 </resources>
